# docforge

./: README.md
docforge-api/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  _pyproject.toml  alembic.ini  pyproject.toml  ruff.toml
docforge-api/alembic/: env.py
docforge-api/alembic/versions/: 0001_initial_initial_schema.py  0002_tags_document_tags_table.py  749c8a45cb1e_autogenerated_migration.py  cd5202311c09_initial_schema_with_ingestion_filename.py
docforge-api/deployments/: docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
docforge-api/docs/: ARCHITECTURE_AND_USAGE.md  DEPLOYMENT.md  DEVELOPMENT.md
docforge-api/src/: main.py
docforge-api/src/api/: deps.py  router.py
docforge-api/src/api/routes/: groups.py  ingestions.py  query.py  tags.py
docforge-api/src/api/schemas/: chat.py  document.py  draft.py  group.py  health.py  ingestion.py  search.py  tag.py
docforge-api/src/application/: __init__.py  chat_pipeline.py  draft_service.py  retrieval.py
docforge-api/src/application/ports/: __init__.py  llm.py
docforge-api/src/bootstrap/: __init__.py  container.py
docforge-api/src/core/: config.py
docforge-api/src/docforge/: main.py
docforge-api/src/docforge/api/: deps.py  router.py
docforge-api/src/docforge/db/: session.py
docforge-api/src/docforge/models/: __init__.py  entities.py
docforge-api/src/docforge/schemas/: document.py  draft.py  ingestion.py
docforge-api/src/docforge/services/: container.py  draft.py  langgraph_chat.py  parser.py  qdrant.py  retrieval.py  storage.py
docforge-api/src/docforge/tasks/: broker.py  ingest_tasks.py  worker.py
docforge-api/src/docforge/utils/: chunking.py
docforge-api/src/infrastructure/document_io/: __init__.py
docforge-api/src/infrastructure/llm/: __init__.py  lmstudio_client.py  ollama_client.py  openai_client.py
docforge-api/src/infrastructure/persistence/: __init__.py
docforge-api/src/infrastructure/vector_store/: __init__.py  qdrant_service.py
docforge-api/src/models/: __init__.py  entities.py
docforge-api/src/schemas/: chat.py  document.py  draft.py  group.py  ingestion.py  search.py
docforge-api/src/services/: __init__.py  container.py  draft.py  langgraph_chat.py  qdrant.py  retrieval.py
docforge-api/src/services/application/: __init__.py  chat_pipeline.py  draft_service.py  retrieval.py
docforge-api/src/services/composition/: __init__.py  container.py
docforge-api/src/services/domain/: __init__.py  llm_protocols.py
docforge-api/src/tasks/: broker.py  ingest_tasks.py  worker.py
docforge-api/src/utils/: hashing.py  lexical.py  qdrant_filters.py
docforge-api/tests/unit/: test_chat_pipeline.py  test_chunking.py  test_lexical.py  test_qdrant_filters.py
(+53 files in other folders)
