[project]
name = "DocForge-RAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "DocForge Team" }]
dependencies = [
  "fastapi>=0.129.0",
  "uvicorn[standard]>=0.40.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "sqlalchemy[asyncio]>=2.0.46",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "taskiq>=0.12.1",
  "taskiq-redis>=1.2.2",
  "redis>=7.1.1",
  "qdrant-client>=1.16.2",
  "httpx>=0.28.1",
  "python-multipart>=0.0.26",
  "aiofiles>=25.1.0",
  "langgraph>=1.0.8",
  "pymupdf>=1.27.1",
  "python-docx>=1.2.0",
  "openpyxl>=3.1.5",
  "python-pptx>=1.0.2",
  "tenacity>=9.1.4",
  "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
docforge-api = "docforge.main:run"
docforge-worker = "docforge.tasks.worker:run_worker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = []
ignore_missing_imports = true
